[package]
authors = ["aarbuzov", "tuck@whistlingfish.net"]
name = "zmodem"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.21.1"
crc = "1.4.0"
env_logger = "0.4.2"
hex = "0.2.0"
hexdump = "0.1.0"
log = "0.3.7"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1"
rand = "0.3.15"
